--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -454,6 +454,7 @@ jobs:
       - integration-2.3-postgres
       - integration-2.3-postgres-gocli
       - blobstore-client-integration
+      - fuzz-tests
     - get: bosh-cli
     - get: candidate-version
       params:
