update pipeline to grab specific release file

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -463,7 +463,7 @@ jobs:
       file: bosh-src/ci/tasks/make-candidate.yml
     - put: bosh-candidate-release-tarballs
       params:
-        file: "release/*.tgz"
+        file: "release/bosh-dev-release.tgz"
 
   - name: bats-centos
     serial: true
