Block candidate release on load tests
[#135442625](https://www.pivotaltracker.com/story/show/135442625)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -455,6 +455,10 @@ jobs:
       - integration-2.3-postgres-gocli
       - blobstore-client-integration
       - fuzz-tests
+      - load-tests-postgres
+      - load-tests-mysql
+      - legacy-load-tests-postgres
+      - legacy-load-tests-mysql
     - get: bosh-cli
     - get: candidate-version
       params:
