--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -68,8 +68,8 @@ shared:
     tags: [vsphere-v5.1]
     file: pipelines/vsphere/tasks/prepare-director.yml
     params: &prepare-director-params
-      BOSH_USER:                            {{stemcell-test-director-username}}
-      BOSH_PASSWORD:                        {{stemcell-test-director-password}}
+      BOSH_CLIENT:                          {{stemcell-test-director-username}}
+      BOSH_CLIENT_SECRET:                   {{stemcell-test-director-password}}
       BOSH_VSPHERE_VCENTER:                 {{vcenter-ip}}
       BOSH_VSPHERE_VCENTER_USER:            {{vcenter-user}}
       BOSH_VSPHERE_VCENTER_PASSWORD:        {{vcenter-password}}
