Use multidigest binary
- add multidigest blob
- include multidigest package
- configure blobstore to use multidigest binary
- remove DavBlobstoreClient and S3BlobstoreClient

[#134619729](https://www.pivotaltracker.com/story/show/134619729)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -90,3 +90,7 @@ s3cli/s3cli-0.0.53-linux-amd64:
   size: 10330042
   object_id: 30b2b4f3-a8d3-4a2d-7881-17cece91574a
   sha: 4d6881fa390c6ecc1e5a0dd73af6951353857106
+verify-multidigest/verify-multidigest-0.0.4-linux-amd64:
+  size: 2847787
+  object_id: 00e7c605-3326-46a1-78fe-338d3bd84158
+  sha: ead1cf0f4b18aba397d5623a9fc2853b9239118c
