Stop triggering promote-candidate and publish-coverage
[#137373371]

Signed-off-by: Dennis Leon <dleon@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -359,7 +359,7 @@ jobs:
     public: true
     serial: true
     plan:
-      - trigger: true
+      - trigger: false
         passed:
         - unit-1.9
         - unit-2.3
@@ -377,7 +377,7 @@ jobs:
     public: true
     serial: true
     plan:
-      - trigger: true
+      - trigger: false
         passed:
         - unit-1.9
         - unit-1.9-postgres
