Final release 260.2 (created from 260.x)
Exposes az key under /deployments/:name/instances

--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -535,6 +535,10 @@ builds:
     blobstore_id: bdeb146f-1469-4a09-892a-91a6c0153f4d
     sha1: 585ccfee51c4cf653378d2a6637ae966f4abc249
     version: 73c2727a78f65fba57accfc7bab4af536def7dd7
+  74fbbe2c2fe31a289d71574802cc3b8f420e11e2:
+    blobstore_id: 16f120d3-f842-4f50-5a06-5dc95ac0522a
+    sha1: 25c987939cd8137f80801f7119c139d60fa1588f
+    version: 74fbbe2c2fe31a289d71574802cc3b8f420e11e2
   76295fca4e905082e18c40f77bbc539a5bb57cd8:
     blobstore_id: 4dc6be65-acba-4ee5-974c-e9b2da3a1c09
     sha1: 57d9708817ee04cbc5989065ad60c5e9f3c6d882
