--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -371,6 +371,10 @@ builds:
     blobstore_id: b5bfca56-e180-40f2-b481-7009124a3333
     sha1: 2c875fdcbd2d10781803b9648f4c90d586f7109e
     version: 60ec5e34ab99e784f391930a4b9343222c9b477e
+  61e203d01cfbd76ea912c2e96fc2bcaaf38ca3e4:
+    blobstore_id: 4e0609dd-7e25-46e5-6159-85de8096d643
+    sha1: 4db11fc009480ee9d0aaca05c565167775e232bc
+    version: 61e203d01cfbd76ea912c2e96fc2bcaaf38ca3e4
   6253cc2bafed494e9cafd60b52ea04cdd9fada76:
     blobstore_id: 8be2777c-810b-4c67-8d8f-2e00a6937b5c
     sha1: eb71411bf857a35d1418f2a0745c7fefbfa7324e
