--- a/releases/index.yml
+++ b/releases/index.yml
@@ -543,6 +543,8 @@ builds:
     version: "135"
   f44d6266-fc52-4553-9c63-ce6c2797a022:
     version: "177"
+  f58ba993-2dbe-4ea6-5d4b-24bd649a5068:
+    version: "260.2"
   f65f663c-613c-459f-8338-86d4bdc608c3:
     version: "204"
   f6e9386b-bc55-473a-9112-834dbaef0d8b:
