Final release 260.3 (created from 260.x)

--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -243,6 +243,10 @@ builds:
     version: 3b6aecde68525c82796a6ce1e19f29a611984267
     blobstore_id: 0e9abfe0-5793-4e0f-5f9a-ccb99e86a39a
     sha1: 5dea31c609d0cd46149f4d01189dc97bba32d3d5
+  3b9f26bdc74c7b6b439577c1e4b2cf1941fe58c3:
+    version: 3b9f26bdc74c7b6b439577c1e4b2cf1941fe58c3
+    blobstore_id: 113837c5-36ca-4c85-7c80-abf10978f82a
+    sha1: 963a86556eca624b651428c67c14b5efd2d2fe3e
   3bc3ca96d760612405ebbf7fc7573b38b52e974f:
     version: "61"
     blobstore_id: 5187d231-09a0-4397-a42c-c6820f6622d2
