--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -455,6 +455,10 @@ builds:
     version: 6e3d26ad2a8c1732aaf885b9034b0e754deabc24
     blobstore_id: cce7d2a9-757e-409f-95a8-a0c598e617bb
     sha1: fa796239dd332954540ebe17a1555d86603f5121
+  6f71f76cfa6e85f14fe22a2114f6b3de73fe531d:
+    version: 6f71f76cfa6e85f14fe22a2114f6b3de73fe531d
+    blobstore_id: 1321c471-c021-44b9-7016-1e84e79171e3
+    sha1: 5d503cb08b2ecce09404d17e6a4739f0a8dd59df
   70fbaa09cc60dd516a5d4e0b6090fb25fd8b9be3:
     version: 70fbaa09cc60dd516a5d4e0b6090fb25fd8b9be3
     blobstore_id: 087014f0-e496-4431-9857-03ef4589d56f
