--- a/.final_builds/packages/registry/index.yml
+++ b/.final_builds/packages/registry/index.yml
@@ -819,6 +819,10 @@ builds:
     version: cf13f219e940b94bc2cca8da93cd27b6fe340936
     blobstore_id: d93cc650-1ebd-4a80-b0e2-ee85b0fb4059
     sha1: 7074c5a8a62d0b72906cca934689bba159d8187f
+  cf4e7bab4ca7d90bb18efa1451d7fa264b0b015b:
+    version: cf4e7bab4ca7d90bb18efa1451d7fa264b0b015b
+    blobstore_id: 23f1135f-9380-410c-63a1-9d3d3e233285
+    sha1: 0626ae8f4fb3c66882491a26760ebb0d2b2544e4
   cf84e62d9d81c647e82d03c9d64a3768579219de:
     version: "42"
     blobstore_id: 72442666-5b95-49b8-9461-8175d42a1f43
