--- a/releases/index.yml
+++ b/releases/index.yml
@@ -537,6 +537,8 @@ builds:
     version: "51"
   ece39b52-2478-4d40-9049-e9931663b98e:
     version: "193"
+  ee8cc10b-5240-4ef0-61cd-e4a8841a0ac9:
+    version: "260.3"
   f3adf894ee76ef6f5c0f7591abb63eaccf06eeea:
     version: "48"
   f3fbedf7-9e2c-4741-abca-fd0a1f7904ab:
