--- a/ci/pipelines/compiled-releases/tasks/deploy-director.yml
+++ b/ci/pipelines/compiled-releases/tasks/deploy-director.yml
@@ -8,9 +8,7 @@ image_resource:
 
 inputs:
   - name: bosh-src
-  - name: bosh-release
-  - name: bosh-aws-cpi-release
-  - name: stemcell
+  - name: bosh-deployment
 
 outputs:
   - name: director-state
