Automatically trigger stemcell builds on changes to bosh-stemcell or stemcell_builder
[#134113675](https://www.pivotaltracker.com/story/show/134113675)

Signed-off-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -115,6 +115,7 @@ jobs:
     serial: true
     plan:
       - get: bosh-src
+        trigger: true
       - get: version
         params:
           bump: {{stemcell_version_semver_bump}}
@@ -722,6 +723,9 @@ resources:
     source:
       uri: {{bosh_src_url}}
       branch: {{stemcell-branch}}
+      paths:
+        - "bosh-stemcell"
+        - "stemcell_builder"
 
   - name: version
     type: semver
