Namespace paths for bosh-src correctly
[#134113675](https://www.pivotaltracker.com/story/show/134113675)

Signed-off-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -724,8 +724,8 @@ resources:
       uri: {{bosh_src_url}}
       branch: {{stemcell-branch}}
       paths:
-        - "bosh-stemcell"
-        - "stemcell_builder"
+        - "src/bosh-stemcell"
+        - "src/stemcell_builder"
 
   - name: version
     type: semver
